homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: zerossl-prod
    external-dns.alpha.kubernetes.io/target: ip.nidr0x.win
spec:
  rules:
    - host: ha.nidr0x.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  name: ws
  tls:
    - hosts:
      - '*.nidr0x.win'
      secretName: zerossl-prod
